[project]
name = "pymctools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "xarray>=2025.10.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "hypothesis>=6.140.3",
    "pooch>=1.8.2",
    "pytest>=8.4.2",
    "pytest-coverage>=0.0",
]
